# market-health-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  make_scores.py  market_ui.py  mh_make_scores.py  pyproject.toml  requirements.txt  scores.csv
.githooks/: pre-commit  pre-push
docs/: M43_Raspberry_Pi_runtime_contract.md  SCORING.md  TESTING.md  UI_CONTRACT.md  allocator_calibration_issue167.md  allocator_rules_precious_metals.md  events_provider.md  positions.v1.md  precious_metals_scoring_v1.md  recommendations.v1.md  scoring_real_vs_placeholder.md
market_health/: __init__.py  __main__.py  alert_cooldowns.py  alert_detectors.py  alert_runner.py  alert_snapshots.py  alert_status.py  alert_store.py  calendar_v1.py  calibration_v1.py  cooldown_policy.py  dashboard.py  dashboard_legacy.py  diversity_constraints.py  engine.py  etf_universe_v1.py  exposure_overlap.py  forecast_audit.py  forecast_checks_a_announcements.py  forecast_checks_b_backdrop.py  forecast_checks_c_crowding.py  forecast_checks_d_danger.py  forecast_checks_e_environment.py  forecast_features.py  forecast_input_inventory.py  forecast_policy.py  forecast_recommendations.py  forecast_score_provider.py  forecast_types.py  glyph_audit_panel.py  glyph_spec.py  golden_fixtures_v1.py  inverse_universe_v1.py  ledger.py  market_catalog.py  market_ui.py  mh_cli.py  positions_sectorize.py  rating.py  recommendation_weighting.py  (+13 more)
scripts/: __init__.py  backfill_forecast_scores_from_positions.py  calendar_provider_cli.py  ci-check.sh  event_provider_cli.py  export_calendar_v1.py  export_calibration_v1.py  export_environment_v1.py  export_flow_v1.py  (+24 more)
(+199 files in other folders)
